# unified-search

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  IMPLEMENTATION_COMPLETE.md  LICENSE  MANIFEST.in  README.md  RENAME_SUMMARY.md  SECURITY.md  T-004_SUMMARY.txt  T-004_VERIFICATION_REPORT.md  pyproject.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
assets/diagrams/: architecture.md
examples/: README.md  advanced_config.py  basic_usage.py  knowledge_systems.py  real_world.py
src/unified_search/: __init__.py  backend_health.py  cache.py  intent_classifier.py  query_intent.py  router.py
src/unified_search/knowledge/: __init__.py
src/unified_search/knowledge/chs/: __init__.py  embeddings.py
tests/: conftest.py  test_backend_health.py  test_embeddings.py  test_init.py  test_intent_classifier.py
