[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unified-search"
version = "0.5.0"
description = "Unified search interface for Code Knowledge System (CKS) and Chat History System (CHS) with multi-language indexing"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "CSF NIP", email = "csf@example.com"},
]
keywords = ["search", "knowledge", "code", "chat", "semantic", "indexing", "cks", "chs"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "structlog>=23.0",
    "click>=8.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "pytest-mock>=3.10",
    "pytest-timeout>=2.1",
    "black>=24.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]
cks = [
    "faiss-cpu>=1.7.4",
    "sentence-transformers>=2.2.0",
    "numpy>=1.24.0",
]
chs = [
    "sentence-transformers>=2.2.0",
]
multilang = [
    "tree-sitter>=0.20.0",
    "tree-sitter-python>=0.20.0",
    "tree-sitter-typescript>=0.20.0",
    "tree-sitter-javascript>=0.20.0",
    "tree-sitter-go>=0.20.0",
    "tree-sitter-rust>=0.20.0",
    "tree-sitter-java>=0.20.0",
]
ml = [
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
]
graph = [
    "networkx>=3.1",
]
all = [
    "unified-search[dev,cks,chs,multilang,ml,graph]",
]

[project.scripts]
unified-search = "unified_search.cli:main"

[project.urls]
Homepage = "https://github.com/csf-nip/unified-search"
Documentation = "https://unified-search.readthedocs.io"
Repository = "https://github.com/csf-nip/unified-search"
Issues = "https://github.com/csf-nip/unified-search/issues"

[tool.setuptools.packages.find]
where = ["src"]

# Note: skill/ directory removed - this is a Python library, not a Claude Code plugin
[tool.setuptools.package-data]
unified_search = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312", "py313"]
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py39"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.ruff.per-file-ignores]
"tests/**/*.py" = ["B011"]  # Allow assert in tests

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
norecursedirs = [
    "tests_old",
    "tests.backup",
    ".git",
    "__pycache__",
    ".hypothesis",
    ".benchmarks",
]
addopts = [
    "-p",
    "no:cacheprovider",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "error",
    "ignore::pytest.PytestWarning",
    "ignore::DeprecationWarning:asyncio.*",
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["src"]
branch = true
data_file = "C:/Users/brsth/AppData/Local/Temp/unified-search/.coverage"

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
